feature-templates/nCino/dataset/01yO3G1U-ID Document Type/.store/metadata/objects/LLC_BI__Id_Document_Type__c.object
<CustomObject>
    <description>The different types or forms of identification documentation available.</description>
    <fields>
        <fullName>LLC_BI__Agency__c</fullName>
        <description>This picklist field is manually populated when configuring ID Document Types. The picklist values are the names of the state or national agency which issued the identification (driver’s license, passport) presented to the financial institution by the natural person associated with the transaction. This data is used for the financial institution’s Customer Identification Program.</description>
        <label>Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DMV</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Display_Order__c</fullName>
        <description>Administrators populate this number field to determine the display order of this ID Document Type selection on the ID Scan page in Customer Engagement.</description>
        <inlineHelpText>Enter a number to determine the display order of the ID Document.</inlineHelpText>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Id_Document_Name__c</fullName>
        <description>Administrators populate this optional text field to display the external names that Customer Portal users should see in place of the ID Document Type name.</description>
        <inlineHelpText>Enter the ID Document name to display in place of the ID Document Type name.</inlineHelpText>
        <label>External ID Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ID_Document_Category__c</fullName>
        <description>Administrators populate this picklist to allow the user to choose the document category. (By default, it is BLANK)</description>
        <inlineHelpText>Select the document category.</inlineHelpText>
        <label>ID Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Driver License</fullName>
                </value>
                <value>
                    <fullName>ID Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__ID_Document_Sides__c</fullName>
        <description>Administrators populate this number field to determine how many sides need to be captured based on the ID Document type.</description>
        <inlineHelpText>Select the ID Document type to help the system determine how many sides need to be captured.</inlineHelpText>
        <label>ID Document Sides</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Id_Document_Image_Back__c</fullName>
        <description>Administrators populate this long text area with the URL for the image that would replace the generic placeholder image for the back of this ID Document Type. By default, the system displays a generic placeholder image.</description>
        <inlineHelpText>Enter the image URL for an image hosted online. If that does not work, upload an image to Documents, set image visibility to public, and then enter the image URL.</inlineHelpText>
        <label>ID Document Image (Back)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Id_Document_Image_Front__c</fullName>
        <description>Administrators populate this long text area with the URL for the image that would replace the generic placeholder image for the front of this ID Document Type. By default, the system displays a generic placeholder image.</description>
        <inlineHelpText>Enter the image URL for an image hosted online. If that does not work, upload an image to Documents, set image visibility to public, and then enter the image URL.</inlineHelpText>
        <label>ID Document Image (Front)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Id_Document_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and is automatically set when the Platform package is installed. This field identifies the ID document requirements for this identification document type.</description>
        <label>Id Document Requirement</label>
        <referenceTo>LLC_BI__Id_Document_Requirement__c</referenceTo>
        <relationshipLabel>Id Document Types</relationshipLabel>
        <relationshipName>Id_Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this checkbox to enable the ID Document for Customer Portal.</description>
        <inlineHelpText>Select the checkbox to enable the ID Document.</inlineHelpText>
        <label>Is Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Name__c</fullName>
        <description>Administrators populate this text field to store the name of an existing Account Document Placeholder that ID Scan uses to store the submitted photo of an ID Document</description>
        <inlineHelpText>Enter the name of the placeholder.</inlineHelpText>
        <label>Placeholder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Quick_Tips__c</fullName>
        <description>Administrators populate this rich text to control the guidance that customers receive when they upload ID Documents.</description>
        <inlineHelpText>Select this functionality to guide you through the upload process for ID Documents.</inlineHelpText>
        <label>Quick Tips</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and can be manually configured to display a field set while collecting ID documents during New Customer Onboarding. It indicates the screen section for the document type.</description>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipName>Identification_Document_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Id Document Type</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Id Document Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Id Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>